syntax = "proto3";

option go_package = "interview-service/api";

// Enum for Skill
enum Skill {
    JAVA = 0;
    PYTHON = 1;
    GOLANG = 2;
    C_PLUS_PLUS = 3;  // Changed to C_PLUS_PLUS because C++ is not valid for enum name
    JAVASCRIPT = 4;
    RUBY = 5;
}

message AnswerRequest {
    string answer = 1;
    string prompt = 2;
    int64 answer_id = 3;
    int64 prompt_id = 4;
}

message AnswerResponse {
    string feedback = 1;
    string feedback_id = 2;
}

message PromptRequest {
    string job_title = 1;
    string company_title = 2;
    string job_description = 3;
    repeated ResumeItem resume_items = 4;
}

message PromptResponse {
    string prompt = 1;
    string prompt_id = 2;
}

message ResumeItem {
    int64 resume_item_id = 1;
    string job_title = 2;
    string resume_description = 3;
    repeated Skill skills = 4;
}

service PromptService {
    rpc GetPrompt (PromptRequest) returns (PromptResponse) {}
}

service AnswerService {
    rpc PostAnswer (AnswerRequest) returns (AnswerResponse) {}
}
